# AbaQ

./: README.md
AbaQ Methods/: Cargo.toml
AbaQ Methods/src/: main.rs  matrixIn.go  methods.go  single_var.rs
AbaQ Methods/src/interpolation/: methods.rs  utilities.rs
AbaQ Methods/src/linear_equations/: methods.rs  utilities.rs
AbaQ Methods/src/root_finding/: methods.rs  mod.rs  register.rs  utilities.rs
